--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,10 +55,10 @@
     <hr class="star-light mb-5" >
     <div class="row" style="font-family: 'Quicksand', sans-serif; font-weight: Medium;">
       <div class="col-lg-4 ml-auto">
-        <p class="lead">Chào mừng các cậu đã đến với Confession của Thủ Dầu Một University! Chỉ có vậy thôi, chẳng có gì đặc sắc hơn đâu, lướt chỗ khác đi :v</p>
+        <p class="lead">Chào mừng các cậu đã đến với Confession của Thủ Dầu Một University!</p>
       </div>
       <div class="col-lg-4 mr-auto">
-        <p class="lead">Chào mừng các cháu đã đến với channel của ông Hưng Vê-lốcccc. Hôm nay ông Hưng sẽ dẫn các cháu đi thăm ngôi trường siêu to khổng lồ của ông Hưng nha!! Đã 20 nôi bánh trưng dồi! Ông không ngờ là ông có thể làm hiệu trưởng của trường siêu to khổng lồ như thế này, đấy, đấy!! *chỉ* *chỉ*.</p>
+        <p class="lead">Hệ thống đăng bài Confession chỉ có ở Đại học Thủ Dầu Một, hứa hẹn những điều mới lạ, cập nhiệt nhiều tính năng riêng cho các thành viên TDMMU Confession</p>
       </div>
     </div>
   </div>
@@ -72,9 +72,9 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">Hồ cá</h2>
+              <h2 class="text-uppercase text-secondary mb-0">Hồ sinh thái</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-1.jpg">
-              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 1 x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Chỗ này rửa tay à ? - Không, đây là nơi trang trí, góc mềm mại, mát mẻ của trường !</p>
             </div>
           </div>
         </div>
@@ -90,9 +90,9 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">vườn học tập</h2>
+              <h2 class="text-uppercase text-secondary mb-0">Vườn học tập</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-2.jpg">
-              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 2x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Nơi có điều hòa duy nhất trong trường mà không tốn điện, nhưng công xuất yếu nhỉ !?</p>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Hành lang</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-3.jpg">
-              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 3x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Vở kính cửa, chạy té sấp mặt, chổ đá banh hay mỗi giờ ra chơi hẹn Crush ra nói chuyện. Không, lớn và học Đại hôc rồi !</p>
             </div>
           </div>
         </div>
