--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Hành lang</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-3.jpg">
-              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Vở kính cửa, chạy té sấp mặt, chổ đá banh hay mỗi giờ ra chơi hẹn Crush ra nói chuyện. Không, lớn và học Đại hôc rồi !</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Vở kính cửa, chạy té sấp mặt, chổ đá banh hay mỗi giờ ra chơi hẹn Crush ra nói chuyện. Không, lớn và học Đại học rồi !</p>
             </div>
           </div>
         </div>
