--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -28,7 +28,7 @@
                     <img src="/assets/img/menu.png" alt="nope">
                 </span>
             </button>
-            <div class="collapse navbar-collapse dropdown text-right" id="navcol-1" style="font-family: 'Pattaya', sans-serif;">
+            <div class="collapse navbar-collapse dropdown text-right" id="navcol-1" style="font-family:inherit  ">
                 <ul class="nav navbar-nav mr-auto"></ul>
                 <span class="navbar-text actions">
                 <% if (locals.user) { %>
