--- a/views/member/posts.ejs
+++ b/views/member/posts.ejs
@@ -1,18 +1,18 @@
-<div class="limiter" style="font-family: 'Lobster', cursive;">
+<div class="limiter">
     <div class="container-table100">
         <div class="wrap-table100">
             <div class="table100">
-                <h1 style="text-align: center; font-size: 60px; font-family: 'Lobster', cursive; padding-top: 50px" >Bài đã đăng</h1>
+                <h1 style="text-align: center; font-size: 60px; padding-top: 50px" >Bài đã đăng</h1>
                 <br>
                 <table>
                     <thead>
                     <tr class="table100-head">
-                        <th class="column1" style="font-family: 'Lobster', cursive;">STT</th>
-                        <th class="column2" style="font-family: 'Lobster', cursive;">Nội dung</th>
-                        <th class="column3" style="font-family: 'Lobster', cursive;">Hình ảnh</th>
-                        <th class="column4" style="font-family: 'Lobster', cursive;">Trạng thái</th>
-                        <th class="column5" style="font-family: 'Lobster', cursive;">Ghi chú</th>
-                        <th class="column6" style="font-family: 'Lobster', cursive;">Thao tác</th>
+                        <th class=" column1" >STT</th>
+                        <th class=" column2" >Nội dung</th>
+                        <th class=" column3" >Hình ảnh</th>
+                        <th class=" column4" >Trạng thái</th>
+                        <th class=" column5" >Ghi chú</th>
+                        <th class=" column6" >Thao tác</th>
                     </tr>
                     </thead>
                     <tbody>
