--- a/public/assets/css/mainpost.css
+++ b/public/assets/css/mainpost.css
@@ -11,7 +11,6 @@
 [ RESTYLE TAG ]*/
 
 * {
-    margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
@@ -41,6 +40,7 @@ a:hover {
 /*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
     margin: 0px;
+    color:#fff;
 }
 
 p {
