--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -6,7 +6,7 @@
                 <p style="font-family: 'Quicksand', sans-serif;">06 Trần Văn Ơn, Phú Hòa, Thủ Dầu Một, Bình Dương</p>
             </div>
             <div class="col-md-6 mb-5 mb-lg-0">
-                <h4 class="text-uppercase" style="font-family: 'Quicksand', sans-serif;">liên hệ</h4>
+                <h4 class="text-uppercase mb-4" style="font-family: 'Quicksand', sans-serif;">liên hệ</h4>
                 <ul class="list-inline">
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-facebook fa-fw"></i></a></li>
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-google-plus fa-fw"></i></a></li>
