--- a/views/member/posts.ejs
+++ b/views/member/posts.ejs
@@ -81,11 +81,15 @@
                             <li class="page-item"><a class="page-link" href="/posts/<%= pages %>">Trang Cuối</a></li>
                         <% } %>
                     </ul>
-                <% } else { %>
+                <% } else {
+                    if (posts.length == 0) { %>
                     <div class="alert alert-info text-center">
                         Bạn chưa đăng bài nào cả, hãy thử đăng một bài đi nhé !
                     </div>
-                <% }%>
+                <%
+                    }
+                }
+                %>
 
 
             </div>
