--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Hồ sinh thái</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-1.jpg">
-              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Chỗ này rửa tay à ? - Không, đây là nơi trang trí, góc mềm mại, mát mẻ của trường !</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; color: black;">Chỗ này rửa tay à ? - Không, đây là nơi trang trí, góc mềm mại, mát mẻ của trường !</p>
             </div>
           </div>
         </div>
