--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -254,7 +254,7 @@ table{
         top: 0;
     }
     table tbody tr td:nth-child(1):before {
-        content: "STT";
+        content: "Chọn";
     }
     table tbody tr td:nth-child(2):before {
         content: "Nội dung";
