--- a/views/member/post.ejs
+++ b/views/member/post.ejs
@@ -12,7 +12,7 @@
                 <%  }); %>
             <% } %>
             <div class="wrap-input100 validate-input" data-validate = "Message is required">
-                <span class="label-input100" style="font-family: 'Lobster', cursive;">Nội dung</span>
+                <span class="label-input100" style="font-family: 'Quicksand', sans-serif;">Nội dung</span>
                 <textarea style="font-family: 'Lobster', cursive;" class="input100" name="content" placeholder="Nội dung ở đây..."><% if (locals.post) { %><%= post.content %><% }%></textarea>
                 <span class="focus-input100"></span>
             </div>
