--- a/views/admin/listPost.ejs
+++ b/views/admin/listPost.ejs
@@ -45,7 +45,7 @@
                             <td class="column4"><%- statusList[post.status] %></td>
                             <td class="column5">&emsp;<%= post.note %></td>
                             <td class="column6">
-                                <a href="/admin/detail?key=<%= post._id %>"">
+                                <a href="/admin/detail?key=<%= post._id %>">
                                     <button class="btn-1 btn-1-warning"><i class="fa fa-edit"></i></button>
                                 </a>
                                 <% if (post.status == 0) { %>
