--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -8,8 +8,8 @@
             <div class="col-md-6 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4" style="font-family: 'Quicksand', sans-serif;">liên hệ</h4>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-facebook fa-fw"></i></a></li>
-                    <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-google-plus fa-fw"></i></a></li>
+                    <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" role="button" href="https://www.facebook.com/CFSTDMU/"><i class="fa fa-facebook fa-fw"></i></a></li>
+                    <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLScmtUnBqAxnAzqrOj2NtLktXEK3cfUfVTJNNCxYC35aufcREw/viewform"><i class="fa fa-google-plus fa-fw"></i></a></li>
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-twitter fa-fw"></i></a></li>
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-dribbble fa-fw"></i></a></li>
                 </ul>
