--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -20,10 +20,10 @@ body, html {
 /* ------------------------------------ */
 a {
     margin: 0px;
-    transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    -moz-transition: all 0.4s;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -moz-transition: all 0.2s;
 }
 
 a:focus {
@@ -114,6 +114,9 @@ iframe {
     flex-wrap: wrap;
     padding: 33px 30px;
 }
+.backgroundManage{
+    background:linear-gradient(180deg,#77a1d3,#79cbca,#e684ae);
+}
 
 .wrap-table100 {
     width: 1170px;
@@ -177,7 +180,7 @@ tbody tr {
 }
 
 tbody tr:hover {
-    color: black;
+    color: blacks;
     font-weight: 600;
     transition: ease-out 0.4ss;
     background-color: #f5f5f5;
