--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada|Pattaya|Lobster|Quicksand">
   <link rel="stylesheet" href="/assets/css/styles.min.css">
   <link rel="stylesheet" href="/assets/css/buttonMenu.css">
+  <link rel="stylesheet" href="/assets/css/Animation.css">
   <link rel="stylesheet" href="/assets/css/mainpost.css">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="shortcut icon" href="/assets/img/favicon.png">
